# xray-vit-classifier

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  visualize_attention.py
.agent/scripts/: build.py  check_commit_msg.py  docs_python.py  format.py  format_python.py  lint.py  lint_python.py  run_benchmarks.py  run_pytest_coverage.py  run_static_analysis.py  run_test_coverage.py  verify_all.py  verify_all_python.py
.agent/user_rules/: git.md
.github/workflows/: python-ci.yml
docs/: architecture.md
docs/adr/: ADR-001-Model-Selection.md
src/xray_classifier/: __init__.py  data.py  engine.py  interpretability.py  models.py  ui.py
tests/: test_core.py
